--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "16": "^0.0.2",
-    "expo": "^50.0.0",
-    "expo-auth-session": "~5.4.0",
-    "expo-random": "~13.6.0",
-    "expo-status-bar": "~1.11.1",
+    "axios": "^1.6.8",
+    "expo": "^49.0.23",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
+    "expo-random": "~13.2.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.72.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
